tests/language_modules/12_type_conflicts/invalid_semantics/error_type_name_collision.vf
module ErrorTypeNameCollision

error NotFound
type NotFound is Integer

end ErrorTypeNameCollision